Bug 1265001 part 1 - Accept uppercase N when parsing An+B.  r=heycam